package com.mars.enums;

public enum AppointmentErrorCode {
    STUDENT_RESTRICTED
}
