package com.mars.enums;

public enum AppointmentReminderType {
    TWENTY_FOUR_HOURS,
    ONE_HOUR
}
