package com.mars.enums;

public enum CategoryGroup {
    ACADEMIC,
    COURSE_EXAM,
    ADMINISTRATIVE
}
