package com.mars.enums;

public enum MeetingType {
    FACE_TO_FACE,
    ONLINE,
    BOTH
}
