package com.mars.enums;

public enum OfficeHourType {
    ONE_TIME,
    RECURRING
}
