package com.mars.enums;

public enum ReasonCode {
    CONFERENCE,
    LEAVE,
    ASSIGNMENT,
    OTHER
}
