package com.mars.enums;

public enum RecurrenceEndMode {
    TERM_END,
    UNTIL_DATE
}
