package com.mars.enums;

public enum RepeatType {
    WEEKLY,
    BIWEEKLY,
    MONTHLY,
    CUSTOM
}
