package com.mars.enums;

public enum RoleType {
    STUDENT,
    ASSISTANT,
    ACADEMICIAN,
    HOD,
    ADMIN
}
