package com.mars.enums;

public enum SlotLockStatus {
    LOCKED,
    CONSUMED,
    RELEASED
}
