package com.mars.enums;

public enum WaitlistStatus {
    WAITING,
    NOTIFIED,
    CONVERTED,
    EXPIRED,
    REJECTED
}
