export type NotificationType =
  | 'NEW_APPOINTMENT_REQUEST'
  | 'APPOINTMENT_APPROVED'
  | 'APPOINTMENT_REJECTED'
  | 'APPOINTMENT_CANCELLED'
  | 'APPOINTMENT_RESCHEDULED'
  | 'APPOINTMENT_RESCHEDULE_REQUESTED'
  | 'APPOINTMENT_RESCHEDULE_REJECTED'
  | 'APPOINTMENT_RESCHEDULE_EXPIRED'
  | 'APPOINTMENT_COMPLETED'
  | 'DELEGATION_REQUEST'
  | 'DELEGATION_ACCEPTED'
  | 'DELEGATION_REJECTED'
  | 'STUDENT_APPROVAL_PENDING'
  | 'DELEGATION_EXPIRED'
  | 'WAITLIST_ADDED'
  | 'WAITLIST_TURN_AVAILABLE'
  | 'WAITLIST_REMOVED'
  | 'WAITLIST_CANCELLED'
  | 'NO_SHOW_RECORDED'
  | 'PENALTY_APPLIED'
  | 'PENALTY_LIFTED'
  | 'SYSTEM';

export type NotificationItem = {
  notificationId: number;
  userId: number;
  notificationType: NotificationType;
  title: string;
  message: string;
  relatedAppointmentId: number | null;
  relatedDelegationId: number | null;
  eventKey: string | null;
  isRead: boolean;
  createdAt: string;
};

export type NotificationPage = {
  content: NotificationItem[];
  page: number;
  size: number;
  totalElements: number;
  totalPages: number;
  first: boolean;
  last: boolean;
};
