@startuml
left to right direction
skinparam linetype ortho
skinparam shadowing false
hide methods
hide circle
hide stereotypes

entity Role {
    * role_id : INTEGER <<PK>>
    --
    role_name : VARCHAR(255) NOT NULL
}

entity Department {
    * department_id : INTEGER <<PK>>
    --
    department_name : VARCHAR(255) NOT NULL
}

entity AppointmentCategory {
    * category_id : INTEGER <<PK>>
    --
    category_name : VARCHAR(255) NOT NULL
    duration_minutes : INTEGER NOT NULL
    category_group : VARCHAR(255) NOT NULL
    requires_course_selection : BOOLEAN NOT NULL
}

entity PenaltyRule {
    * penalty_rule_id : INTEGER <<PK>>
    --
    max_no_show_count : INTEGER NOT NULL
    ban_duration_days : INTEGER NOT NULL
    is_active : BOOLEAN NOT NULL
}

entity User {
    * user_id : INTEGER <<PK>>
    --
    full_name : VARCHAR(255) NOT NULL
    institutional_email : VARCHAR(255) NOT NULL UNIQUE
    password_hash : VARCHAR(255) NOT NULL
    role_id : INTEGER <<FK>> NOT NULL
    department_id : INTEGER <<FK>> NOT NULL
    is_active : BOOLEAN NOT NULL
    academic_title : VARCHAR(100)
    is_accepting_appointments : BOOLEAN NOT NULL
    created_at : TIMESTAMP(6) NOT NULL
}

entity Course {
    * course_id : INTEGER <<PK>>
    --
    course_code : VARCHAR(255) NOT NULL
    course_name : VARCHAR(255) NOT NULL
    department_id : INTEGER <<FK>> NOT NULL
    academic_term : VARCHAR(255) NOT NULL
    owner_academician_id : INTEGER <<FK>> NOT NULL
    is_active : BOOLEAN NOT NULL
    created_at : TIMESTAMP(6) NOT NULL
    updated_at : TIMESTAMP(6) NOT NULL
}

entity CourseAssignment {
    * course_assignment_id : INTEGER <<PK>>
    --
    course_id : INTEGER <<FK>> NOT NULL
    assistant_id : INTEGER <<FK>> NOT NULL
    assigned_at : TIMESTAMP(6) NOT NULL
}

entity RecurrenceRule {
    * recurrence_rule_id : INTEGER <<PK>>
    --
    staff_id : INTEGER <<FK>> NOT NULL
    repeat_type : VARCHAR(255) NOT NULL
    repeat_count : INTEGER NOT NULL
    start_date : DATE NOT NULL
    end_date : DATE NOT NULL
}

entity AvailabilitySlot {
    * slot_id : INTEGER <<PK>>
    --
    staff_id : INTEGER <<FK>> NOT NULL
    slot_date : DATE NOT NULL
    start_time : TIME(6) NOT NULL
    end_time : TIME(6) NOT NULL
    recurrence_rule_id : INTEGER <<FK>>
    is_blocked : BOOLEAN NOT NULL
    meeting_type : VARCHAR(255) NOT NULL
}

entity OutOfOfficePeriod {
    * out_of_office_id : INTEGER <<PK>>
    --
    staff_id : INTEGER <<FK>> NOT NULL
    start_date : DATE NOT NULL
    end_date : DATE NOT NULL
    reason_code : VARCHAR(255) NOT NULL
}

entity Appointment {
    * appointment_id : INTEGER <<PK>>
    --
    student_id : INTEGER <<FK>> NOT NULL
    staff_id : INTEGER <<FK>> NOT NULL
    category_id : INTEGER <<FK>> NOT NULL
    course_id : INTEGER <<FK>>
    slot_id : INTEGER <<FK>> NOT NULL UNIQUE
    appointment_status : VARCHAR(255) NOT NULL
    meeting_type : VARCHAR(255) NOT NULL
    is_limited_duration : BOOLEAN NOT NULL
    no_show_marked_by_user_id : INTEGER <<FK>>
    created_at : TIMESTAMP(6) NOT NULL
    updated_at : TIMESTAMP(6) NOT NULL
}

entity DelegationLog {
    * delegation_id : INTEGER <<PK>>
    --
    appointment_id : INTEGER <<FK>> NOT NULL
    delegated_by_user_id : INTEGER <<FK>> NOT NULL
    delegated_to_user_id : INTEGER <<FK>> NOT NULL
    delegated_at : TIMESTAMP(6) NOT NULL
    updated_at : TIMESTAMP(6) NOT NULL
    delegation_status : VARCHAR(255) NOT NULL
    approval_required : BOOLEAN NOT NULL
    student_approval_expires_at : TIMESTAMP(6)
    target_slot_id : INTEGER <<FK>>
    target_slot_date : DATE
    target_start_time : TIME(6)
    target_end_time : TIME(6)
    slot_lock_status : VARCHAR(32)
}

entity StudentPenaltyStatus {
    * student_id : INTEGER <<PK, FK>>
    --
    is_restricted : BOOLEAN NOT NULL
    restriction_start_date : DATE
    restriction_end_date : DATE
    total_no_show_count : INTEGER NOT NULL
    penalty_rule_id : INTEGER <<FK>> NOT NULL
}

entity WaitlistEntry {
    * waitlist_entry_id : INTEGER <<PK>>
    --
    student_id : INTEGER <<FK>> NOT NULL
    staff_id : INTEGER <<FK>> NOT NULL
    category_id : INTEGER <<FK>> NOT NULL
    course_id : INTEGER <<FK>>
    requested_at : TIMESTAMP(6) NOT NULL
    waitlist_status : VARCHAR(255) NOT NULL
    slot_id : INTEGER <<FK>>
    offered_at : TIMESTAMP(6)
}

entity Notification {
    * notification_id : INTEGER <<PK>>
    --
    user_id : INTEGER <<FK>> NOT NULL
    notification_type : VARCHAR(64) NOT NULL
    title : VARCHAR(255) NOT NULL
    message : VARCHAR(1000) NOT NULL
    related_delegation_id : INTEGER <<FK>>
    is_read : BOOLEAN NOT NULL
    email_delivery_status : VARCHAR(32) NOT NULL
    recipient_email : VARCHAR(255) NOT NULL
    created_at : TIMESTAMP(6) NOT NULL
    related_appointment_id : INTEGER <<FK>>
    event_key : VARCHAR(64) UNIQUE
}

entity AppointmentRescheduleRequest {
    * reschedule_request_id : INTEGER <<PK>>
    --
    appointment_id : INTEGER <<FK>> NOT NULL
    original_slot_id : INTEGER <<FK>> NOT NULL
    proposed_slot_id : INTEGER <<FK>> NOT NULL
    proposed_meeting_type : VARCHAR(32) NOT NULL
    request_status : VARCHAR(32) NOT NULL
    expires_at : TIMESTAMP(6) NOT NULL
    created_at : TIMESTAMP(6) NOT NULL
    updated_at : TIMESTAMP(6) NOT NULL
}

entity AppointmentReminderDelivery {
    * reminder_delivery_id : INTEGER <<PK>>
    --
    appointment_id : INTEGER <<FK>> NOT NULL
    recipient_user_id : INTEGER <<FK>> NOT NULL
    reminder_type : VARCHAR(32) NOT NULL
    delivery_status : VARCHAR(16) NOT NULL
    attempted_at : TIMESTAMP(6) NOT NULL
}

entity UserEmailNotificationPreference {
    * user_id : INTEGER <<PK, FK>>
    --
    appointment_request : BOOLEAN NOT NULL
    appointment_approval : BOOLEAN NOT NULL
    appointment_rejection : BOOLEAN NOT NULL
    appointment_cancellation : BOOLEAN NOT NULL
    reschedule : BOOLEAN NOT NULL
    delegation : BOOLEAN NOT NULL
    appointment_reminder : BOOLEAN NOT NULL
    waitlist : BOOLEAN NOT NULL
    no_show : BOOLEAN NOT NULL
    penalty : BOOLEAN NOT NULL
    system_announcements : BOOLEAN NOT NULL
}

entity DelegationStatusHistory {
    * history_id : INTEGER <<PK>>
    --
    delegation_id : INTEGER <<FK>> NOT NULL
    status : VARCHAR(50) NOT NULL
    changed_at : TIMESTAMP NOT NULL
}

enum AppointmentErrorCode {
    STUDENT_RESTRICTED
}

enum AppointmentReminderType {
    TWENTY_FOUR_HOURS
    ONE_HOUR
}

enum AppointmentStatus {
    PENDING
    APPROVED
    REJECTED
    COMPLETED
    NO_SHOW
    CANCELLED
}

enum CategoryGroup {
    ACADEMIC
    COURSE_EXAM
    ADMINISTRATIVE
}

enum DelegationStatus {
    PENDING
    PENDING_ACADEMICIAN_APPROVAL
    PENDING_STUDENT_APPROVAL
    ACCEPTED
    REJECTED
    STUDENT_REJECTED
    EXPIRED
    CANCELLED
    COMPLETED
}

enum EmailNotificationCategory {
    APPOINTMENT_REQUEST
    APPOINTMENT_APPROVAL
    APPOINTMENT_REJECTION
    APPOINTMENT_CANCELLATION
    RESCHEDULE
    DELEGATION
    APPOINTMENT_REMINDER
    WAITLIST
    NO_SHOW
    PENALTY
    SYSTEM_ANNOUNCEMENT
}

enum MeetingType {
    FACE_TO_FACE
    ONLINE
    BOTH
}

enum NotificationType {
    NEW_APPOINTMENT_REQUEST
    APPOINTMENT_APPROVED
    APPOINTMENT_REJECTED
    APPOINTMENT_CANCELLED
    APPOINTMENT_RESCHEDULED
    APPOINTMENT_RESCHEDULE_REQUESTED
    APPOINTMENT_RESCHEDULE_REJECTED
    APPOINTMENT_RESCHEDULE_EXPIRED
    APPOINTMENT_COMPLETED
    DELEGATION_REQUEST
    DELEGATION_ACCEPTED
    DELEGATION_REJECTED
    STUDENT_APPROVAL_PENDING
    DELEGATION_EXPIRED
    WAITLIST_ADDED
    WAITLIST_TURN_AVAILABLE
    WAITLIST_REMOVED
    WAITLIST_CANCELLED
    NO_SHOW_RECORDED
    PENALTY_APPLIED
    PENALTY_LIFTED
    SYSTEM
}

enum OfficeHourType {
    ONE_TIME
    RECURRING
}

enum PenaltyNotificationEvent {
    APPLIED
    LIFTED
}

enum ReasonCode {
    CONFERENCE
    LEAVE
    ASSIGNMENT
    OTHER
}

enum RecurrenceEndMode {
    TERM_END
    UNTIL_DATE
}

enum RepeatType {
    WEEKLY
    BIWEEKLY
    MONTHLY
    CUSTOM
}

enum RescheduleRequestStatus {
    PENDING
    ACCEPTED
    REJECTED
    EXPIRED
}

enum RoleType {
    STUDENT
    ASSISTANT
    ACADEMICIAN
    HOD
    ADMIN
}

enum SlotLockStatus {
    LOCKED
    CONSUMED
    RELEASED
}

enum WaitlistNotificationEvent {
    ADDED
    TURN_AVAILABLE
    REMOVED
    CANCELLED
}

enum WaitlistStatus {
    WAITING
    NOTIFIED
    CONVERTED
    EXPIRED
    REJECTED
}

Role ||--o{ User : role_id
Department ||--o{ User : department_id
Department ||--o{ Course : department_id
User ||--o{ Course : owner_academician_id
Course ||--o{ CourseAssignment : course_id
User ||--o{ CourseAssignment : assistant_id
User ||--o{ RecurrenceRule : staff_id
User ||--o{ AvailabilitySlot : staff_id
RecurrenceRule ||--o{ AvailabilitySlot : recurrence_rule_id
User ||--o{ OutOfOfficePeriod : staff_id
User ||--o{ Appointment : student_id
User ||--o{ Appointment : staff_id
AppointmentCategory ||--o{ Appointment : category_id
Course ||--o{ Appointment : course_id
AvailabilitySlot ||--o| Appointment : slot_id
User ||--o{ Appointment : no_show_marked_by_user_id
Appointment ||--o{ DelegationLog : appointment_id
User ||--o{ DelegationLog : delegated_by_user_id
User ||--o{ DelegationLog : delegated_to_user_id
AvailabilitySlot ||--o{ DelegationLog : target_slot_id
User ||--o| StudentPenaltyStatus : student_id
PenaltyRule ||--o{ StudentPenaltyStatus : penalty_rule_id
User ||--o{ WaitlistEntry : student_id
User ||--o{ WaitlistEntry : staff_id
AppointmentCategory ||--o{ WaitlistEntry : category_id
Course ||--o{ WaitlistEntry : course_id
AvailabilitySlot ||--o{ WaitlistEntry : slot_id
User ||--o{ Notification : user_id
Appointment ||--o{ Notification : related_appointment_id
DelegationLog ||--o{ Notification : related_delegation_id
Appointment ||--o{ AppointmentRescheduleRequest : appointment_id
AvailabilitySlot ||--o{ AppointmentRescheduleRequest : original_slot_id
AvailabilitySlot ||--o{ AppointmentRescheduleRequest : proposed_slot_id
Appointment ||--o{ AppointmentReminderDelivery : appointment_id
User ||--o{ AppointmentReminderDelivery : recipient_user_id
User ||--o| UserEmailNotificationPreference : user_id
DelegationLog ||--o{ DelegationStatusHistory : delegation_id

@enduml
